objects/NTFS__c.object
<CustomObject>
    <fields>
        <fullName>Forma_de_Pagamento_Picklist__c</fullName>
        <label>Forma de Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dinheiro</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa ELO</fullName>
                </value>
                <value>
                    <fullName>Visa Vale</fullName>
                </value>
                <value>
                    <fullName>Visa Platinum</fullName>
                </value>
                <value>
                    <fullName>Visa Infinite</fullName>
                </value>
                <value>
                    <fullName>Clube Rio Design</fullName>
                </value>
                <value>
                    <fullName>Dinheiro(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Débito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Debito</fullName>
                    <label>Cartão Débito</label>
                </value>
                <value>
                    <fullName>Aplicativo</fullName>
                </value>
                <value>
                    <fullName>Aplicativo(FDS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NTFS (Cliente)</relationshipLabel>
        <relationshipName>NTFS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Conta_Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conta Principal</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NTFS (Conta Principal)</relationshipLabel>
        <relationshipName>NTFS_ContaPrincipal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Data_da_Nota__c</fullName>
        <label>Data da Nota</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Forma_de_pagamento__c</fullName>
        <label>Forma de pagamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Loja__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loja</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Loja</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NTFS</relationshipLabel>
        <relationshipName>NTFS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Marca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marca</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NTFS (Marca)</relationshipLabel>
        <relationshipName>NTFS_Marca</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_NTFS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NTFS</label>
        <referenceTo>NTFS__c</referenceTo>
        <relationshipLabel>NTFS</relationshipLabel>
        <relationshipName>NTFS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_NomeVendedor__c</fullName>
        <label>Nome do Vendedor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Participante__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participante</label>
        <referenceTo>Participante__c</referenceTo>
        <relationshipLabel>NTFS</relationshipLabel>
        <relationshipName>NTFS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Promocao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoção</label>
        <referenceTo>TW1_Parametros_Promocao__c</referenceTo>
        <relationshipLabel>NTFS</relationshipLabel>
        <relationshipName>NTFS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>NTFS</relationshipLabel>
        <relationshipName>NTFS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_RS__c</fullName>
        <label>Valor (R$)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>NTFS</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>TW1_Cliente__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>TW1_Valor_RS__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_Loja__c</columns>
        <columns>TW1_NomeVendedor__c</columns>
        <columns>TW1_Forma_de_pagamento__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TW1_Cliente__c</field>
            <operation>equals</operation>
            <value>CARLOS HENRIQUE REGINALDO SALES</value>
        </filters>
        <filters>
            <field>TW1_Cliente__c</field>
            <operation>equals</operation>
            <value>dlayton ferreira dos santos</value>
        </filters>
        <filters>
            <field>TW1_Shopping__c</field>
            <operation>contains</operation>
            <value>natal</value>
        </filters>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Número da NTFS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NTFS</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>